--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,10 @@ target-version = ['py38']
 [tool.isort]
 profile = "black"
 
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -v"
+
 [tool.coverage.run]
 branch = true
 
