--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,11 +7,17 @@ on:
   pull_request:
 
 jobs:
-  test-souffle-analyzer:
+  lint:
+    uses: nathanwn/workflows/.github/workflows/tox.yml@3654b0bc8b591f0b6ef0deae901a8645ed9330c7  # v0.5.0
+    with:
+      os: '["ubuntu-latest"]'
+      env: '["pre-commit"]'
+
+  test:
     uses: nathanwn/workflows/.github/workflows/tox.yml@3654b0bc8b591f0b6ef0deae901a8645ed9330c7  # v0.5.0
     with:
       os: '["ubuntu-latest", "windows-latest", "macos-latest"]'
-      env: '["py38", "py39", "py310", "py311", "py312", "pre-commit"]'
+      env: '["py38", "py39", "py310", "py311", "py312"]'
 
   test-vscode-extension:
     runs-on: ubuntu-latest
