--- a/vscode/package.json
+++ b/vscode/package.json
@@ -3,7 +3,7 @@
     "description": "VSCode extension for the Souffle Analyzer language server",
     "author": "Nhat M. Nguyen (nathanwn)",
     "license": "MIT",
-    "version": "0.0.1",
+    "version": "0.0.1-rc",
     "repository": {
         "type": "git",
         "url": "https://github.com/nathanwn/souffle-analyzer"
@@ -65,6 +65,7 @@
         "@types/node": "^18.14.6",
         "@typescript-eslint/eslint-plugin": "^7.1.0",
         "@typescript-eslint/parser": "^7.1.0",
+        "@vscode/vsce": "^2.26.0",
         "eslint": "^8.57.0",
         "mocha": "^10.3.0",
         "prettier": "3.2.5",
